syntax = "proto3";
package sgn.health.v1;

option go_package = "github.com/celer-network/sgn-v2/relayer";

message ReportCurrentBlockNumberRequest {
  // serialized CurrentBlockNumberReport
  bytes report = 1;
  bytes sig = 2;
}

message CurrentBlockNumberReport {
  // in millis
  uint64 timestamp = 1;
  // key is chainId, value is block number
  map<string, uint64> block_nums = 2;
  string sgnd_version = 3;
  repeated LiquidityProviderFeeEarningLog lp_fee_earning_logs = 4;
}

message LiquidityProviderFeeEarningLog {
  // 0x
  string liquidity_provider_addr = 1;
  // in millis
  uint64 timestamp = 2;
  string transfer_id = 3;
  string transfer_token_symbol = 4;
  uint32 token_decimal = 5;
  uint64 src_chain_id = 6;
  uint64 dst_chain_id = 7;
  string liquidity_used_on_dst_chain = 8;
  string earned_fee = 9;
}

message ReportCurrentBlockNumberResponse {
  ErrMsg err = 1;
}

message ErrMsg {
  ErrCode code = 1;
  string msg = 2;
}

enum ErrCode {
  ERROR_CODE_UNDEFINED = 0;
  ERROR_CODE_COMMON = 500;
  ERROR_NO_TOKEN_ON_DST_CHAIN = 1001;
  ERROR_NO_TOKEN_ON_SRC_CHAIN = 1002;
  ERROR_INIT_WITHDRAW_FAILED = 1003;
  ERROR_CODE_NO_ENOUGH_TOKEN_ON_DST_CHAIN = 1004;
}
