syntax = "proto3";

option go_package = "github.com/celer-network/sgn-v2/x/sync/types";

// buf protoc --gocosmos_out=plugins=interfacetype+grpc:. types.proto

// --------------- states ----------------

enum UpdateType {
    Invalid = 0;
    EthBlkNum = 1;
    StakingContractParam = 2;
    ValidatorAddrs = 3; // update validator signer and sgn addresses
    ValidatorStatus = 4;
    ValidatorTokenShare = 5;
    ValidatorCommissionRate = 6;
    DelegatorShare = 7;
}

enum UpdateStatus {
    Null = 0;
    Pending = 1;
    Passed = 2;
    Failed = 4;
}

enum VoteOption {
    Empty = 0;
    Yes = 1;
    Abstain = 2;
    No = 3;
}

message Vote {
    string voter = 1;
    VoteOption option = 2;
}

message Update {
    uint64 id = 1;
    UpdateType type = 2;
    bytes data = 3;
    uint64 eth_block = 4;
    string proposer = 5;
    repeated Vote votes = 6;
    UpdateStatus status = 7;
    uint64 submit_ts = 8;
    uint64 closing_ts = 9;
}

message Params {
    uint64 voting_period = 1;
    float tally_threshold = 2;
}

// --------------- tx messages ----------------

message StakingContractParamData {
    uint64 record = 1;
    string value = 2;
}

message SubmitUpdate {
    UpdateType type = 1;
    bytes data = 2;
    uint64 eth_block = 3;
}

message MsgSubmitUpdates {
    repeated SubmitUpdate updates = 1;
    string sender = 2;
}

message VoteUpdate {
    uint64 id = 1;
    VoteOption option = 2;
}

message MsgVoteUpdates {
    repeated VoteUpdate votes = 1;
    string sender = 2;
}

// --------------- genesis ----------------

message GenesisState {
    Params params = 1;
    uint64 start_update_id = 2;
}